--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -31,7 +31,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
         {% endif %}
         <li>
           <span class="subscriber">
-            Subscriber{{ podcast.n_subscribers|pluralize }}
+            Subscribers:
           </span>
           <span class="n_subscribers">
             {{ podcast.n_subscribers }}
@@ -82,107 +82,137 @@ Listen to episodes of {{ podcast.title }} on dopepod
         </li>
       </ul>
     </div>
-    <div class="col-8 col-lg-6" id="showpod-c" data-podid="{{ podcast.podid }}">
-      <h1 id="showpod-title">
-        {{ podcast.title }}
-      </h1>
-      <h2 id="showpod-artist">
-        <span>
-          By
-        </span>
-        {{ podcast.artist }}
-      </h2>
-      <p id="showpod-description">
-        {{ podcast.description }}
-      </p>
-    </div>
-    <div class="col-lg-2 d-none d-lg-block" id="showpod-r">
-      <ul class="showpod-side-list">
-        {% if podcast.global_rank %}
-        <li>
-          <span class="global_rank">
-            #{{ podcast.global_rank }} in
-            podcasts
+    <div class="col-8">
+      <div class="row" id="showpod-c" data-podid="{{ podcast.podid }}">
+        <div class="col">
+          <h1 id="showpod-title">
+            {{ podcast.title }}
+          </h1>
+          <span id="showpod-artist">
+            By
+            <h2>
+              {{ podcast.artist }}
+            </h2>
           </span>
-        </li>
-        {% endif %}
-        {% if podcast.genre_rank %}
-        <li>
-          <span class="genre_rank">
-            #{{ podcast.genre_rank }} in
-            {% if podcast.genre.supergenre %}
-            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-              {{ podcast.genre.supergenre }}
-            </a>
-            {% else %}
-            <a href="/charts/?genre={{ podcast.genre.url_format }}">
-              {{ podcast.genre }}
-              {% endif %}
-            </a>
-          </span>
-        </li>
-        {% endif %}
-        <li>
-          <span class="subscriber">
-            Subscriber{{ podcast.n_subscribers|pluralize }}
-          </span>
-          <span class="n_subscribers">
-            {{ podcast.n_subscribers }}
-          </span>
-        </li>
-        {% if not podcast.genre_rank and not podcast.global_rank %}
-          <li>
-          <span class="genre_rank">
-            Genre:
-            {% if podcast.genre.supergenre %}
-            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-              {{ podcast.genre.supergenre }}
-            </a>
-            {% else %}
-            <a href="/charts/?genre={{ podcast.genre.url_format }}">
-              {{ podcast.genre }}
-            </a>
+          <p id="showpod-description">
+            {{ podcast.description }}
+          </p>
+        </div>
+        <div class="col-lg-4 d-none d-lg-block" id="showpod-r">
+          <ul class="showpod-side-list">
+            {% if podcast.global_rank %}
+            <li>
+              <span class="global_rank">
+                #{{ podcast.global_rank }} in
+                podcasts
+              </span>
+            </li>
             {% endif %}
-          </span>
-        </li>
+            {% if podcast.genre_rank %}
+            <li>
+              <span class="genre_rank">
+                #{{ podcast.genre_rank }} in
+                {% if podcast.genre.supergenre %}
+                <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
+                  {{ podcast.genre.supergenre }}
+                </a>
+                {% else %}
+                <a href="/charts/?genre={{ podcast.genre.url_format }}">
+                  {{ podcast.genre }}
+                  {% endif %}
+                </a>
+              </span>
+            </li>
+            {% endif %}
+            <li>
+              <span class="subscriber">
+                Subscribers:
+              </span>
+              <span class="n_subscribers">
+                {{ podcast.n_subscribers }}
+              </span>
+            </li>
+            {% if not podcast.genre_rank and not podcast.global_rank %}
+            <li>
+              <span class="genre_rank">
+                Genre:
+                {% if podcast.genre.supergenre %}
+                <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
+                  {{ podcast.genre.supergenre }}
+                </a>
+                {% else %}
+                <a href="/charts/?genre={{ podcast.genre.url_format }}">
+                  {{ podcast.genre }}
+                </a>
+                {% endif %}
+              </span>
+            </li>
+            {% endif %}
+            <li>
+              <span>
+                Content:
+              </span>
+              <span class="showpod-explicit">
+                {% if podcast.explicit %}
+                explicit
+                {% else %}
+                clean
+                {% endif %}
+              </span>
+            </li>
+            <li>
+              <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
+                <span>
+                  Podcast website
+                </span>
+              </a>
+            </li>
+            <li>
+              <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
+                <span>
+                  Podcast RSS feed
+                </span>
+              </a>
+            </li>
+            <li>
+              <em>
+                <span id="showpod-copyright">
+                  {{ podcast.copyrighttext }}
+                </span>
+              </em>
+            </li>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 showpod-options d-none d-lg-block">
+        {% if user.is_authenticated %}
+          <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="podid" value="{{ podcast.podid }}">
+            {% if podcast.is_subscribed %}
+              <button type="submit" class="btn-dope btn-dope-showpod sub-button">
+                Unsubscribe
+            {% else %}
+              <button type="submit" class="btn-dope btn-dope-showpod active sub-button">
+                Subscribe
+            {% endif %}
+              </button>
+          </form>
         {% endif %}
-        <li>
+        <a class="btn-dope active" id="show-episodes" href="#">
           <span>
-            Content:
+            Episodes
           </span>
-          <span class="showpod-explicit">
-            {% if podcast.explicit %}
-            explicit
-            {% else %}
-            clean
-            {% endif %}
+        </a>
+        <button class="btn-dope btn-dope-showpod btn-dope-disabled">
+          <span>
+            Reviews
           </span>
-        </li>
-        <li>
-          <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
-            <span>
-              Podcast website
-            </span>
-          </a>
-        </li>
-        <li>
-          <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
-            <span>
-              Podcast RSS feed
-            </span>
-          </a>
-        </li>
-        <li>
-          <em>
-            <span id="showpod-copyright">
-              {{ podcast.copyrighttext }}
-            </span>
-          </em>
-        </li>
-        </li>
-      </ul>
+        </button>
+      </div>
+      </div>
     </div>
-    <div class="col-12" id="showpod-options">
+    <div class="col-12 showpod-options d-block d-lg-none">
       {% if user.is_authenticated %}
         <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
           {% csrf_token %}
