--- a/index/static/style.css
+++ b/index/static/style.css
@@ -745,17 +745,49 @@ a:hover {
   float: right;
 }
 
-/* PODINFO */
+/* SHOWPOD */
 #showpod {
   padding: 15px 0;
 }
 #showpod-c {
-  overflow: hidden;
-  min-height: 340px;
-  padding: 0 10px 0 0;
+  height: 100%;
 }
 #showpod-l {
   padding-right: 10px;
+}
+#showpod-r {
+  padding-left: 0;
+  align-self: flex-end;
+}
+.showpod-side-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+  width: 100%;
+}
+#showpod-l .showpod-side-list {
+  margin-top: 10px;
+}
+#showpod-r .showpod-side-list {
+}
+.showpod-side-list li {
+  border-bottom: 2px solid rgba(0, 191, 165, 1);
+  margin-bottom: 5px;
+}
+.showpod-options {
+  align-self: flex-end;
+  padding-top:  10px;
+}
+#showpod-copyright {
+}
+#showpod-title {
+  font-size: 1.7em;
+}
+#showpod-artist h2 {
+  display: inline-block;
+  font-size: 1.25em;
+}
+#showpod-description {
 }
 .showpod-image {
   position: static;
@@ -858,43 +890,6 @@ a:hover {
 }
 .char-6 {
   transform: rotate(300deg);
-}
-#showpod-r {
-  padding-left: 0;
-}
-.showpod-side-list {
-  list-style: none;
-  padding: 0;
-  margin-bottom: 0;
-}
-#showpod-l .showpod-side-list {
-  margin-top: 10px;
-  overflow: hidden;
-}
-#showpod-r .showpod-side-list {
-  overflow: hidden;
-}
-#showpod-l .showpod-side-list li {
-  border-bottom: 2px solid rgba(0, 191, 165, 1);
-  margin-bottom: 4px;
-}
-#showpod-r .showpod-side-list li {
-  margin-bottom: 4px;
-}
-.showpod-options {
-  float: right;
-  padding-top:  10px;
-}
-#showpod-copyright {
-}
-#showpod-title {
-  font-size: 24px;
-  margin: 0;
-}
-#showpod-artist {
-  font-size: 20px;
-}
-#showpod-description {
 }
 
 /* EPISODES */
