--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -7,25 +7,49 @@ Listen to episodes of {{ podcast.title }} on dopepod
 {% block center-stage %}
 <div class="col results">
   <div class="row" id="showpod">
-    <div class="col-4" id="showpod-l">
+    <div class="col-12 col-lg-4" id="showpod-l">
       <!-- BADGE -->
       <div class="showpod-image">
         <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=360&h=360&t=absolute" />
       </div>
-      <ul class="showpod-side-list d-block d-lg-none">
-        {% if podcast.rank %}
+    </div>
+    <div class="col-12 col-lg-6" id="showpod-c" data-podid="{{ podcast.podid }}">
+      <h1 id="showpod-title">
+        {{ podcast.title }}
+      </h1>
+      <span id="showpod-artist">
+        By
+        <h2>
+          {{ podcast.artist }}
+        </h2>
+      </span>
+      <p id="showpod-description">
+        {{ podcast.description }}
+      </p>
+    </div>
+    <div class="col-12 col-lg-2" id="showpod-r">
+      <ul class="showpod-side-list">
+        {% if podcast.global_rank %}
+        <li>
+          <span class="global_rank">
+            #{{ podcast.global_rank }} in
+            podcasts
+          </span>
+        </li>
+        {% endif %}
+        {% if podcast.genre_rank %}
         <li>
           <span class="genre_rank">
-            #{{ podcast.rank }} in
+            #{{ podcast.genre_rank }} in
             {% if podcast.genre.supergenre %}
-              <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-                {{ podcast.genre.supergenre }}
-              </a>
+            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
+              {{ podcast.genre.supergenre }}
+            </a>
             {% else %}
-              <a href="/charts/?genre={{ podcast.genre.url_format }}">
-                {{ podcast.genre }}
-              </a>
-            {% endif %}
+            <a href="/charts/?genre={{ podcast.genre.url_format }}">
+              {{ podcast.genre }}
+              {% endif %}
+            </a>
           </span>
         </li>
         {% endif %}
@@ -55,14 +79,6 @@ Listen to episodes of {{ podcast.title }} on dopepod
         {% endif %}
         <li>
           <span>
-            Language:
-          </span>
-          <span class="showpod-language">
-            {{ podcast.language }}
-          </span>
-        </li>
-        <li>
-          <span>
             Content:
           </span>
           <span class="showpod-explicit">
@@ -74,145 +90,29 @@ Listen to episodes of {{ podcast.title }} on dopepod
           </span>
         </li>
         <li>
+          <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
+            <span>
+              Podcast website
+            </span>
+          </a>
+        </li>
+        <li>
+          <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
+            <span>
+              Podcast RSS feed
+            </span>
+          </a>
+        </li>
+        <li>
           <em>
-            <span class="showpod-copyright">
+            <span id="showpod-copyright">
               {{ podcast.copyrighttext }}
             </span>
           </em>
         </li>
       </ul>
     </div>
-    <div class="col-8">
-      <div class="row" id="showpod-c" data-podid="{{ podcast.podid }}">
-        <div class="col">
-          <h1 id="showpod-title">
-            {{ podcast.title }}
-          </h1>
-          <span id="showpod-artist">
-            By
-            <h2>
-              {{ podcast.artist }}
-            </h2>
-          </span>
-          <p id="showpod-description">
-            {{ podcast.description }}
-          </p>
-        </div>
-        <div class="col-lg-4 d-none d-lg-block" id="showpod-r">
-          <ul class="showpod-side-list">
-            {% if podcast.global_rank %}
-            <li>
-              <span class="global_rank">
-                #{{ podcast.global_rank }} in
-                podcasts
-              </span>
-            </li>
-            {% endif %}
-            {% if podcast.genre_rank %}
-            <li>
-              <span class="genre_rank">
-                #{{ podcast.genre_rank }} in
-                {% if podcast.genre.supergenre %}
-                <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-                  {{ podcast.genre.supergenre }}
-                </a>
-                {% else %}
-                <a href="/charts/?genre={{ podcast.genre.url_format }}">
-                  {{ podcast.genre }}
-                  {% endif %}
-                </a>
-              </span>
-            </li>
-            {% endif %}
-            <li>
-              <span class="subscriber">
-                Subscribers:
-              </span>
-              <span class="n_subscribers">
-                {{ podcast.n_subscribers }}
-              </span>
-            </li>
-            {% if not podcast.genre_rank and not podcast.global_rank %}
-            <li>
-              <span class="genre_rank">
-                Genre:
-                {% if podcast.genre.supergenre %}
-                <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-                  {{ podcast.genre.supergenre }}
-                </a>
-                {% else %}
-                <a href="/charts/?genre={{ podcast.genre.url_format }}">
-                  {{ podcast.genre }}
-                </a>
-                {% endif %}
-              </span>
-            </li>
-            {% endif %}
-            <li>
-              <span>
-                Content:
-              </span>
-              <span class="showpod-explicit">
-                {% if podcast.explicit %}
-                explicit
-                {% else %}
-                clean
-                {% endif %}
-              </span>
-            </li>
-            <li>
-              <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
-                <span>
-                  Podcast website
-                </span>
-              </a>
-            </li>
-            <li>
-              <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
-                <span>
-                  Podcast RSS feed
-                </span>
-              </a>
-            </li>
-            <li>
-              <em>
-                <span id="showpod-copyright">
-                  {{ podcast.copyrighttext }}
-                </span>
-              </em>
-            </li>
-          </li>
-        </ul>
-      </div>
-      <div class="col-12 showpod-options d-none d-lg-block">
-        {% if user.is_authenticated %}
-          <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="podid" value="{{ podcast.podid }}">
-            {% if podcast.is_subscribed %}
-              <button type="submit" class="btn-dope btn-dope-showpod sub-button">
-                Unsubscribe
-            {% else %}
-              <button type="submit" class="btn-dope btn-dope-showpod active sub-button">
-                Subscribe
-            {% endif %}
-              </button>
-          </form>
-        {% endif %}
-        <a class="btn-dope active" id="show-episodes" href="#">
-          <span>
-            Episodes
-          </span>
-        </a>
-        <button class="btn-dope btn-dope-showpod btn-dope-disabled">
-          <span>
-            Reviews
-          </span>
-        </button>
-      </div>
-      </div>
-    </div>
-    <div class="col-12 showpod-options d-block d-lg-none">
+    <div class="col-12 showpod-options">
       {% if user.is_authenticated %}
         <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
           {% csrf_token %}
@@ -227,16 +127,16 @@ Listen to episodes of {{ podcast.title }} on dopepod
             </button>
         </form>
       {% endif %}
-      <a class="btn-dope active" id="show-episodes" href="#">
-        <span>
-          Episodes
-        </span>
+      <a class="btn-dope toggle" id="show-episodes" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+        Episodes
       </a>
-      <button class="btn-dope btn-dope-showpod btn-dope-disabled">
+      <button class="btn-dope btn-dope-disabled">
         <span>
           Reviews
         </span>
       </button>
+    </div>
+    <div class="col-12 collapse show" id="episodes-collapse">
     </div>
   </div>
 </div>
