--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -53,7 +53,7 @@
               {% include 'results_base.html' %}
             {% endwith %}
           {% endif %}
-          {% if results.last_played %}
+          {% if last_played %}
             {% include 'last_played.html' %}
           {% endif %}
         </div>
